--- a/app/views/teachers/t_message_reply.html.erb
+++ b/app/views/teachers/t_message_reply.html.erb
@@ -27,7 +27,7 @@ body {
   }
 </style>
 
-<script>
+<script type="text/javascript">
   jQuery("#form_1").validationEngine('attach', {
     promptPosition: "topRight: -70" //アラートの吹き出し位置調整
   });
