面談不具合修正

--- a/app/views/meetings/new_user.html.erb
+++ b/app/views/meetings/new_user.html.erb
@@ -58,7 +58,7 @@
           <%= link_to "希望日登録", user_meetings_desired_path(@user), remote: true, class: "btn btn-success submit-width" %>
         </div>
         <div id="desired" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
-      </>
+      </div>
 
       <div class="meeting-time" style="margin-top: 20px;">
         <% @meeting_children.each do |meeting| %>
