--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -49,7 +49,7 @@
           <thead>
             <tr>
               <td style="background: #FF9933; color: white;">面談日</td>
-              <td style="background: #ffffff;" colspan="2"><%= f.text_field :date, class: 'form-control date-picker select-font', readonly: true %></td>
+              <td style="background: #ffffff;" colspan="2"><%= f.text_field :date, class: 'form-control date-picker select-font' %></td>
             </tr>
             <tr style="background: #79c06e; color: white;">
               <td style="width: 50%;">開始時間</td>
