--- a/app/views/layouts/documents/_select.html.erb
+++ b/app/views/layouts/documents/_select.html.erb
@@ -35,7 +35,7 @@
              <input type="radio" name="rd<%= item_count %>" value="<%= select.content %>" class="document_select_radio" id="document_select_label">
           <% end %>
         <% end%>  
-         &emsp;&emsp;&emsp;&emsp;<label class="document_user_select_radio"><%= obj = select.content %></label>
+         &emsp;&emsp;&emsp;&emsp;<label class="document_user_select_radio"><%= obj = select.content.split(":")[0] %></label>
         <% unless obj == item.document_selects.last.content %> <!--最後の要素の境界線を消す-->
        <% end%>  
        <br> 
