--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -43,5 +43,8 @@
   }
 </style>
 <script>
- $('#date_picker').datepicker();
+ $('#date_picker').datepicker({
+    minDate: '0', 
+    hideIfNoPrevNext: true,  
+ });
 </script>
