--- a/app/views/documents/new3.html.erb
+++ b/app/views/documents/new3.html.erb
@@ -32,5 +32,8 @@
   }
 </style>
 <script>
-  $('#date_picker').datepicker();
+$('#date_picker').datepicker({
+    minDate: '0', 
+    hideIfNoPrevNext: true,  
+ });
 </script>
