提出編集css調整

--- a/app/assets/stylesheets/documents2.scss
+++ b/app/assets/stylesheets/documents2.scss
@@ -116,6 +116,7 @@
     width:22%;
     margin-bottom: 2%;
   }
+  .document_edit_delete_button{margin-bottom: 1.5%;}
   .document_edit_delete_button,.document_edit_select_button{width:80%;}
   /*教員の保護者提出フォーム確認ページ*/
   .teacher_create_form_title{
@@ -174,6 +175,7 @@
        margin-left:2%;
        margin-bottom: 4%;
     }
+    .document_edit_delete_button{margin-top:2%;}
     .document_edit_delete_button,.document_edit_select_button{
       width: 30%;
       font-size: 8px;
