--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -77,8 +77,13 @@
   </div>
 </div>
 
-<script>
+<style>
+  body {
+    background-color: #f7f5e6;;
+  }
+</style>
 
+<script type="text/javascript">
   // datepicker関連
   $(function(){
     $("#datepicker").datepicker({
@@ -94,11 +99,4 @@
       }
     });
   });
-
 </script>
-
-<style>
-  body {
-    background-color: #f7f5e6;;
-  }
-</style>
