--- a/app/views/meetings/new_user.html.erb
+++ b/app/views/meetings/new_user.html.erb
@@ -19,11 +19,11 @@
     </div>
   <% elsif @meeting_times_status == "meeting_decision" %>
 
-    <% if Date.today > @limit_date %>
-      <h1 id="meeting-top-title" class="bg-info">スケジュール調整中のため、編集できません。</h1>
+    <% if Date.today > @limit_date %> <!-- 編集期間 -->
+      <h1 id="meeting-top-title" class="bg-info">スケジュール調整中のため、予約できません。</h1>
     <% else %>
       <div class="meeting-user">
-        <p style="color: red;"><i class="fas fa-exclamation-circle" style="color: red;"></i>「<%= @limit_date.to_s(:date) %>」まで編集可能</p>
+        <p class="yoyaku-edit"><i class="fas fa-exclamation-triangle fa-fw" style="color: red;"></i>「<%= @limit_date.to_s(:date) %>」までは予約の変更ができます。</p>
         <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%; margin-top: 20px; background-color: #ffffff;">
           <thead>
             <tr style="background: #FF9933; color: white;">
@@ -55,7 +55,7 @@
           </tbody>
         </table>
         <div id="submit-center">
-          <%= link_to "希望日登録", user_meetings_desired_path(@user), remote: true, class: "btn btn-success submit-width" %>
+          <%= link_to "希望日登録", user_meetings_desired_path(@user), remote: true, class: "btn btn-success submit-edit" %>
         </div>
         <div id="desired" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
       </div>
@@ -68,7 +68,7 @@
               <thead>
                 <tr style="background: #FF9933; color: white;">
                   <td>日付</td>
-                  <td>不可時間</td>
+                  <td>NG時間</td>
                   <td>可・不可チェック</td>
                 </tr>
               </thead>
@@ -76,7 +76,7 @@
                 <% dates.sort.each do |date| %>
                   <tr>
                     <!-- 日付 -->
-                    <td><%= date %></td>
+                    <td><%= date.to_s(:date) %></td>
                     <!-- 都合の悪い時間 -->
                     <td>
                       <% @meeting_children.each do |meeting| %>
@@ -105,7 +105,7 @@
                                 });
                               </script>
                             </div>
-                            <div>面談希望日</div>
+                            <div class="btn btn-danger">面談希望日</div>
                           <% elsif  meeting.date == date && meeting.status == 2 %>
 
                             <div class="btn-group" role="group" style="float: left; margin-bottom: 2%;">
