--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -72,8 +72,8 @@
 
         <div class="col-md-1 col-xs-6 col-md-offset-1" >
           <%= link_to teacher_t_message_path(@teacher),id:"teacher_bt" do %>
-            <span class="teacher_link_icon"><i class="fas fa-comments"></i></span>
-            <div class="teacher_icon_title">&emsp;&emsp;お便り送信</div>
+            <span class="teacher_link_icon"><i class="far fa-newspaper"></i></span>
+            <div class="teacher_icon_title">&emsp;お便り送信</div>
           <% end %>
         </div>
       </div>
