--- a/app/views/users/messages.html.erb
+++ b/app/views/users/messages.html.erb
@@ -1,5 +1,5 @@
 <div class="tm-back">
-  <h1 id="meeting-top-title">先生からのお便り一覧</h1>
+  <h1 id="meeting-top-title"><i class="fas fa-envelope-open-text"></i>&nbsp;お便り一覧</h1>
 
   <% if @t_messages.present? %>
     <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%; margin-top: 20px;">
