--- a/app/views/teachers/t_message.html.erb
+++ b/app/views/teachers/t_message.html.erb
@@ -8,10 +8,12 @@
 
       <%= f.label :title, "タイトル", class: "label-signup" %>
       <%= f.text_field :title, class: "form-control validate[required,maxSize[20]]" %>
+      <div id="message1"></div>
 
       <%= f.label :content, "内容", class: "label-signup" %>
       <br><span style="color: red">100文字以内で入力してください。</span>
       <%= f.text_area :content, class: "form-control validate[required,maxSize[100]]", style: "height: 100px" %>
+      <div id="message2"></div>
 
       <%= f.submit "送信", class: "btn btn-primary btn-block btn-signup" %>
     <% end %>
