--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -3,19 +3,19 @@
 
 <div class="row" style="background:none;">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @child, url: user_users_update2_path(user_id: params[:user_id], child_id: params[:child_id]), local: true) do |f| %>
+    <%= form_with(model: @child, url: user_users_update2_path(user_id: params[:user_id], child_id: params[:child_id]), html: {role: 'form', :id => "form_1"}, local: true) do |f| %>
       <%= render 'shared/child_error_messages' %>
 
       <%= f.label :name_1, "姓", class: "label-signup new_user_label" do %>
          姓<span style="color:red">&emsp;(*必須です)</span>
       <% end %>
 
-      <%= f.text_field :name_1, class: "form-control" %>
-        
+      <%= f.text_field :name_1, class: "form-control validate[required,maxSize[10]]" %>
+
       <%= f.label :name_2, "名", class: "label-signup new_user_label" do %>
         名<span style="color:red">&emsp;(*必須です)</span>
       <% end %>
-      <%= f.text_field :name_2, class: "form-control" %>
+      <%= f.text_field :name_2, class: "form-control validate[required,maxSize[10]]" %>
 
       <%= f.submit "更新", class: "btn btn-primary btn-block btn-signup",style:"background:#4689FF" %>
     <% end %>
@@ -38,3 +38,11 @@
    color:blue;
  }
 </style>
+
+<script>
+  $(function(){
+    jQuery("#form_1").validationEngine('attach', {
+      promptPosition: "topRight: -70" //アラートの吹き出し位置調整
+    });
+  });
+</script>
