--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -48,11 +48,11 @@
         <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%;">
           <thead>
             <tr>
-              <td style="background: #FF9933; color: white;">面談日</td>
+              <td style="background: #FF9933; color: white;" colspan="2">面談日</td>
               <td style="background: #ffffff;" colspan="2"><%= f.text_field :date, class: 'form-control date-picker select-font' %></td>
             </tr>
             <tr style="background: #79c06e; color: white;">
-              <td style="width: 50%;">開始時間</td>
+              <td colspan="2" style="width: 50%;">開始時間</td>
               <td style="width: 25%;">面談時間</td>
               <td style="width: 25%;">枠</td>
             </tr>
@@ -61,11 +61,13 @@
           <tbody>
             <tr>
               <td>
-                <%= f.select :published_at_hour, @hour, {}, class: 'form-control box select-font', style: "width: 45%;" %> :
-                <%= f.select :published_at_minute_1, @minutes1, {}, class: 'form-control box select-font', style: "width: 45%;" %>
+                <%= f.select :published_at_hour, @hour, {}, class: 'form-control box select-font' %>時
               </td>
-              <td><%= f.select :published_at_minute_2, @minutes2, {}, class: 'form-control select-font' %></td>
-              <td><%= f.select :frame, @frame_list, {}, class: 'form-control select-font' %></td>
+              <td>
+                <%= f.select :published_at_minute_1, @minutes1, {}, class: 'form-control box select-font' %>分
+              </td>
+              <td><%= f.select :published_at_minute_2, @minutes2, {}, class: 'form-control select-font' %>分</td>
+              <td><%= f.select :frame, @frame_list, {}, class: 'form-control select-font' %>枠</td>
             </tr>
           </tbody>
         </table>
