--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -15,7 +15,7 @@
         <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%; margin-bottom: 20px;">
           <thead>
             <tr style="background: #FF9933; color: white;">
-              <td style="width: 50%;">開始時間</td>
+              <td colspan="2" style="width: 50%;">開始時間</td>
               <td style="width: 25%;">面談時間</td>
               <td style="width: 25%;">枠</td>
             </tr>
@@ -24,14 +24,13 @@
           <tbody>
             <tr>
               <td>
-                <div>
-                  <%= f.select :published_at_hour, @hour, {}, class: 'form-control box select-font', style: "width: 45%;" %>
-                  <span>:</span>
-                  <%= f.select :published_at_minute_1, @minutes1, {}, class: 'form-control box select-font', style: "width: 45%;" %>
-                </div>
+                <%= f.select :published_at_hour, @hour, {}, class: 'form-control box select-font' %>時
               </td>
-              <td><%= f.select :published_at_minute_2, @minutes2, {}, class: 'form-control select-font' %></td>
-              <td><%= f.select :frame, @frame_list, {}, class: 'form-control select-font' %></td>
+              <td>
+                <%= f.select :published_at_minute_1, @minutes1, {}, class: 'form-control box select-font' %>分
+              </td>
+              <td><%= f.select :published_at_minute_2, @minutes2, {}, class: 'form-control select-font' %>分</td>
+              <td><%= f.select :frame, @frame_list, {}, class: 'form-control select-font' %>枠</td>
             </tr>
           </tbody>
         </table>
