--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -8,7 +8,7 @@
 <%= form_with(url:push_path,local:true) do |f| %>
   <%= link_to "メニューへ","/teachers/1",class:"btn btn-default document_index_back_btn2" %>
   <%= f.submit "通知する",class:"btn btn-primary" %>
-  <%= link_to "集計する",aggre_documents_path,class:"btn btn-success" %>
+  <%= link_to "集計ページへ",aggre_documents_path,class:"btn btn-success" %>
 <% end %>
 <br><br>
 
