--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,12 +49,17 @@
 
   <div class="row" style="background:none;">
 
-
+     <!-- <div class= "col-md-2 col-xs-3 col-md-offset-1 col-xs-offset-2"> -->
+       <%#= link_to user_p_message_path(@user), style:"text-decoration: none;" do %>
+         <!-- <span class="user_link_icon"><i class="fas fa-paper-plane"></i></span> -->
+         <!-- <div class="user_icon_title">先生へ連絡する</div> -->
+       <%# end %>
+     <!-- </div> -->
 
       <div class= "col-md-2 col-xs-3 col-md-offset-1 col-xs-offset-2">
        <%= link_to  user_users_messages_path(@user), style:"text-decoration: none;" do %>
          <span class="user_link_icon"><i class="fas fa-envelope-open-text"></i></span>
-         <div class="user_icon_title">お便り一覧<%= render 'new_label' if @t_message.new_arrival? %></div>
+         <div class="user_icon_title">お便り一覧<%#= render 'new_label' if @t_message.new_arrival? %></div>
        <% end %>
      </div>
 
