--- a/app/views/users/file_show.html.erb
+++ b/app/views/users/file_show.html.erb
@@ -21,7 +21,7 @@
         <tbody>
           <td style="text-align:left" class="title_font">
              <span style="color:blue">回答</span><br>
-             <%= @answers[i] %>
+             <%= @answers[i].split(":")[0] %>
           </td>
         </tbody>
       <% end %>
