--- a/app/views/users/document_show.html.erb
+++ b/app/views/users/document_show.html.erb
@@ -49,7 +49,7 @@
                   <% if document.answers.count == 0 && document.deadline >= Date.today  %>
                     <!-- ユーザー1の時は表示しない -->
                     <%= link_to "資料を見る",user_document_view_path(@user,document),class:"btn btn-info" unless @user.id == 1 %>
-                  <% elsif document.answers.count > 0 && document.deadline > Date.today  %> 
+                  <% elsif document.answers.count > 0 && document.deadline >= Date.today  %> 
                     <%= link_to "やり直す",user_document_view_path(@user,document),class:"btn btn-warning" unless @user.id == 1%> 
                <% end %>
             </td>
