herokuメール仮完了

--- a/app/views/sendmail_mailer/meeting1_mail.html.erb
+++ b/app/views/sendmail_mailer/meeting1_mail.html.erb
@@ -8,7 +8,7 @@
     <p>
       <%= @username %>さん
 
-      面談日時が決まりました。
+      面談日時が決まりました。<br>
       下記URLからサイトにアクセスして、面談の予約をご登録下さい。
 
       学校の面談と提出アプリ
