--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:button_text, '更新') %>
 <% provide(:title, "#{@user.name}さん編集") %>
 
-<div id="meeting-top-title" style="color:blue;"><i class="fas fa-user-edit"></i>&emsp;<%= @user.name + @user.name2 %>さんの情報編集</div>
+<div id="meeting-top-title" style="color:blue;"><i class="fas fa-user-edit"></i>&nbsp;<%= @user.name + @user.name2 %>さんの情報編集</div>
 
 <div class="row" style="background:none;">
   <div class="col-md-8 col-md-offset-2">
