--- a/app/views/sendmail_mailer/meeting1_mail.html.erb
+++ b/app/views/sendmail_mailer/meeting1_mail.html.erb
@@ -9,10 +9,10 @@
       <%= @username %>さん
 
       面談日時が決まりました。<br>
-      下記URLからサイトにアクセスして、面談の予約をご登録下さい。
+      下記URLからサイトにアクセスして、面談の予約をご登録下さい。<br>
 
-      学校の面談と提出アプリ
-      https://school-app-pta.herokuapp.com/
+      学校の面談と提出アプリ<br>
+      https://school-app-pta.herokuapp.com/<br>
 
       よろしくお願いいたします。
     </p>
