--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -86,6 +86,11 @@
       <% else %>
         <div id="submit-center">
           <button class="btn btn-success submit-edit2" readonly: true>スケジュールを決定は、<br>保護者の編集期間終了後から可能です。</button>
+          <!-- テスト時のみ使用 -->
+          <div id="submit-center">
+            <%= f.submit "更新", class: "btn btn-success submit-edit" %>
+          </div>
+          <!-- テスト時のみ使用 -->
         </div>
       <% end %>
     <% end %>
