--- a/app/views/meeting2_mailer/meeting2_mail.html.erb
+++ b/app/views/meeting2_mailer/meeting2_mail.html.erb
@@ -6,13 +6,12 @@
   <body>
     <h1>面談のお知らせです。</h1>
     <p>
-      <%= @username %>さん
-
-      面談日時が確定いたしました。<br>
-      下記URLからサイトにアクセスして、ご確認ください。<br>
+      <%= @user_name %>さん<br>
+      面談日時が決まりました。<br>
+      下記URLから面談希望日の予約をお願いいたします。<br>
 
       学校の面談と提出アプリ<br>
-      https://school-app-pta.herokuapp.com/<br>
+      https://school-app-pta.herokuapp.com/
 
       よろしくお願いいたします。
     </p>
