--- a/app/views/meeting2_mailer/meeting2_mail.text.erb
+++ b/app/views/meeting2_mailer/meeting2_mail.text.erb
@@ -1,9 +1,8 @@
 面談のお知らせです。
 
-<%= @username %>さん
-
+<%= @user_name %>さん
 面談日時が決まりました。
-下記URLからサイトにアクセスして、面談の予約をご登録下さい。
+下記URLから面談希望日の予約をお願いいたします。
 
 学校の面談と提出アプリ
 https://school-app-pta.herokuapp.com/
