herokuメール完成

--- a/app/views/document_mailer/document_mail.html.erb
+++ b/app/views/document_mailer/document_mail.html.erb
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>提出物のお知らせです。</h1>
+    <h1>提出書類のお知らせです。</h1>
     <p>
       <%= @user_name %>さん<br>
       新しい提出書類がございます。<br>
