--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -128,7 +128,7 @@
         </div>
       <% end %>
       <div id="submit-center">
-        <%= form_with(url: push_path, local:true) do |f| %>
+        <%= form_with(url: meeting2_push_path, local:true) do |f| %>
           <%= f.submit "日時決定送信", data: {confirm: "LINEグループに通知しますがよろしいですか？"}, class: "btn btn-primary submit-edit", id: "line-btn" %>
         <% end %>
       </div>
